tests/cases/compiler/invalidChar1/index.ts
var 🀒
//~^ ERROR: Invalid character.
//~| ERROR: Variable declaration list cannot be empty.
